# Basic-Matics

./: .classpath  .gitignore  .project  CHANGELOG.md  COPYRIGHT  COPYRIGHT.md  LICENSE.md  NEWS.md  README.md  build.gradle  pom.xml  pyproject.toml  requirements.txt  settings.gradle
.github/workflow/: version.yml
.github/workflows/: python-package.yml  version.yml
basicmatics/: __main__.py  addition.py  division.py  multiplication.py  subtraction.py
basicmatics/data/: languages.py  settings.py
basicmatics/gui/: __init__.py  main.py  ops.py  settings.py
gradle/wrapper/: gradle-wrapper.properties
linux/: build.gradle
macosx/: build.gradle
macosx/src/main/kotlin/com/micromatic/basicmatics/settings/: Language.kt  OS.kt
src/com/micromatic/basicmatics/: BSMException.java  BasicMatics.java  Ops.java
src/com/micromatic/basicmatics/settings/: BSMProperties.java  OS.java  Settings.java
src/main/java/com/micromatic/basicmatics/: BasicMatics.java  Ops.java
src/main/java/com/micromatic/basicmatics/divide/: DivideGManager.java  DivideGManagerES.java  DivideManager.java  DivideManagerES.java  DivideRManager.java  DivideRManagerES.java
src/main/java/com/micromatic/basicmatics/mtpl/: MtplManager.java  MtplManagerES.java
src/main/java/com/micromatic/basicmatics/potence/: PotenceManager.java
src/main/java/com/micromatic/basicmatics/rest/: RestManager.java  RestManagerES.java
src/main/java/com/micromatic/basicmatics/sqrt/: SqrtManager.java
src/main/java/com/micromatic/basicmatics/sume/: SumeManager.java  SumeManagerES.java
win/: build.gradle
win/src/main/kotlin/com/micromatic/basicmatics/: BSMException.kt  BasicMatics.kt  Load.kt
(+2 files in other folders)
