[project]
name = "basicmatics"
version = "0.2.1"
authors = [
    { name = "Breixo Montenegro", email = "saltaestrellas@hotmail.com" }
]
description = "Small graphic python calculator"
license = "LICENSE.md"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Python :: 3",
    "License :: AGPL :: 3.0",
    "OS :: OS Independent"
]

[build-system]
requires = ["setuptools>=61.0", "Pillow>=9.4.0", "ttkthemes>=3.2.2"]
build-backend = "setuptools.build_meta"